Fixed wave divider positioning issue on smaller screen sizes

--- a/styles.css
+++ b/styles.css
@@ -36,9 +36,9 @@ body {
 
 .section-divider {
     transform: translate(-50%, -50%);
-    position: absolute;
+    position: relative;
     left: 50%;
-    top: 50%;
+    top: -25px;
 }
 
 .info-section {
@@ -95,7 +95,7 @@ hr {
         transform: translate(-50%, -50%);
         position: absolute;
         left: 50%;
-        top: 44%;
+        top: 250px;
     }
 
 }
